// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdownHeader customize 1`] = `
<div>
  <h3
    class="dropdown-header bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CDropdownHeader component 1`] = `
<div>
  <h6
    class="dropdown-header"
  >
    Test
  </h6>
</div>
`;
